--- a/LocalPizza/wwwroot/css/Menu.css
+++ b/LocalPizza/wwwroot/css/Menu.css
@@ -161,7 +161,7 @@ h2.lightHeading:nth-child(2) {
     width: 200px;
     background-color: white;
 
-    margin-right: 44px;
+    margin-right: 29px;
     border-radius: 15px;
     padding: 13px;
 }
@@ -199,8 +199,9 @@ h2.lightHeading:nth-child(2) {
 
 
 #right-form {
-    padding-left: 150px;
+    padding-left: 110px;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 #right-form>h3:nth-child(1){
     font-family: Poppins;
@@ -208,7 +209,8 @@ h2.lightHeading:nth-child(2) {
     padding-left: 40px;
     font-size: 30px;
 }
-.crust {
+.crust,
+#toppings {
     display: inline-flex;
     background-color: #E3E3E3;
     border-radius: 25px;
@@ -217,7 +219,8 @@ h2.lightHeading:nth-child(2) {
     justify-content: space-between;
     width: 400px;
 }
-.crust>div {
+.crust>div,
+.topping {
     display: inline-block;
     background-color: white;
     padding: 7px;
@@ -225,11 +228,16 @@ h2.lightHeading:nth-child(2) {
     border-radius: 15px;
 }
 
-.crust>div>p {
+.crust>div>p,
+div.topping>p {
     text-align: center;
     margin: 5px 0px 5px 0px;
     font-family: Poppins;
     font-weight: 500;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100px;
+    white-space: nowrap;
 }
 .crust>div>img {
     border-radius: 8px;
@@ -240,8 +248,34 @@ h2.lightHeading:nth-child(2) {
     font-family: Poppins;
     font-weight: 700;
 }
+#customiseForm {
+    scrollbar-width: thin;
+    scrollbar-color: #77a88d #77a88d82;
+}
 .customiseForm>h4:nth-child(1) {
     font-size: 17px;
+}
+.small-shadow {
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+}
+.checked {
+    box-shadow: 0 0 3pt 2pt rgb(0, 174, 0);
+}
+#toppings {
+    flex-wrap: wrap;
+    width: 638px;
+    overflow-y:scroll;
+    max-height: 220px;
+}
+div.topping>img {
+    width: 100px;
+    border-radius: 10px;
+    height: 70px;
+
+}
+.topping {
+    margin-bottom:10px;
 }
 .customiseForm>h4:nth-child(4)>span:nth-child(1) {
     color: #BC4E4E;
