--- a/LocalPizza/wwwroot/css/Menu.css
+++ b/LocalPizza/wwwroot/css/Menu.css
@@ -19,13 +19,35 @@
     }
 }
 
+h5, p {
+    margin: 0px;
+}
+.topping-price {
+    float: right;
+}
 #PizzaHeading {
     width: 100%;
     height: 14.5vw;
     object-fit: cover;
     border-radius: 0.8vw;
 }
+#itemOrderDetail>h5{
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 15px;
+}
+#itemOrderDetail>p,
+#itemOrderDetail>div {
+    font-family: Poppins;
+    font-weight: 300;
+    font-size: 13px;
+}
+#itemOrderDetail>div{
+    overflow-y: scroll;
+    max-height: 137px;
+    scrollbar-width: thin;
 
+}
 h2.MenuHeading {
     font-family: Poppins;
     font-weight: 700;
@@ -135,8 +157,13 @@ div.flexContainer {
     font-size: 32px;
 }
 h2.lightHeading:nth-child(2) {
-    text-align: right;
-    margin-left: 180px;
+    float: right;
+}
+#OrderTotal {
+    margin:0px;
+    font-size:55px;
+    font-weight: 700;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.315);
 }
 .product-name {
     background-color: #bc4e4e;
@@ -156,6 +183,7 @@ h2.lightHeading:nth-child(2) {
     align-items: stretch;
     align-content: space-around;
     position: absolute;
+    margin-top: 87px;
 }
 #itemOrderDetail {
     width: 200px;
@@ -166,21 +194,44 @@ h2.lightHeading:nth-child(2) {
     padding: 13px;
 }
 #bottom-form {
-    margin-top: 433px;
+    margin-top: 500px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: white;
     font-family: Poppins;
 }
-
-#CartButton>h3:nth-child(1){
-    margin: 0px;
+#close {
+    font-size: 51px;
+    position: absolute;
+    top: 60px;
+    right: 60px;
+    color: #537969;
+    cursor: pointer;
+}
+#background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position-y: -500px;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
+    background-color: #537969;
+}
+#CartButton>h3:nth-child(1) {
+    margin: auto;
+    text-align: center;
+    font-size: 23px;
 }
 #CartButton {
+    cursor: pointer;
     padding: 10px;
     background-color: #6565F6;
     border-radius: 10px;
+    width: 150px;
+    height: 38px;
 }
 #itemOrderImage {
     z-index: 6;
@@ -251,6 +302,8 @@ div.topping>p {
 #customiseForm {
     scrollbar-width: thin;
     scrollbar-color: #77a88d #77a88d82;
+    position: absolute;
+    top: 60px;
 }
 .customiseForm>h4:nth-child(1) {
     font-size: 17px;
@@ -262,11 +315,14 @@ div.topping>p {
 .checked {
     box-shadow: 0 0 3pt 2pt rgb(0, 174, 0);
 }
+
 #toppings {
     flex-wrap: wrap;
     width: 638px;
     overflow-y:scroll;
     max-height: 220px;
+    scrollbar-width: thin;
+
 }
 div.topping>img {
     width: 100px;
