--- a/LocalPizza/Pages/Complete.cshtml
+++ b/LocalPizza/Pages/Complete.cshtml
@@ -2,7 +2,9 @@
 @model LocalPizza.Pages.CompleteModel
 @{
 }
-
+@section Style {
+    <link rel="stylesheet" href="~/css/Complete.css" />
+}
 
 <h1>Order on it's way!</h1>
 
